--- a/3_pca-plots_v1.Rmd
+++ b/3_pca-plots_v1.Rmd
@@ -26,11 +26,11 @@ knitr::opts_chunk$set(
 
 # PCA plots
 
-This section uses the counts data generated in Section 1 to perform PCA analyses and plot them. 
+This section uses the counts data (all datasets) generated in Section 1 for cluseter analyses. Breifly, the counts data is imported in R, batch corrected using `ComBat_seq`, `vst` transformation and clustering is performed using `DESeq2`, and results visualized as PCA plots.
 
 ## Prerequisites
 
-Packages required for this analyses are loaded as follows:
+R packages required for this section are loaded
 
 ```{r, warnings=TRUE, message=FALSE}
 setwd("~/github/amnion.vs.other_RNASeq")
@@ -44,7 +44,9 @@ library(RColorBrewer)
 library(plotly)
 ```
 
-## Import datasets
+## PCA plot for all libraries
+
+### Import datasets
 
 The `counts` data and its associated metadata (`coldata`) are imported for analyses
 
@@ -55,13 +57,13 @@ coldata <- read.csv(groupFile, row.names=1, sep="\t", stringsAsFactors = TRUE)
 cts <- as.matrix(read.csv(counts,sep="\t",row.names="gene.ids"))
 ```
 
-Inspect the `coldata`
+inspect the `coldata`
 
 ```{r coldata}
 DT::datatable(coldata)
 ```
 
-order and inspect if all the `coldata` matches the headers of the counts data.
+reorder columns of `cts` according to `coldata` rows. Check if it both files matches.
 
 ```{r order, warnings=TRUE, message=FALSE}
 colnames(cts)
@@ -69,6 +71,9 @@ all(rownames(coldata) %in% colnames(cts))
 cts <- cts[, rownames(coldata)]
 ```
 
+### Batch correction
+
+Using combat seq (SVA package) run batch correction - using bioproject ids as variable (dataset origin).
 
 ```{r batchcorrect, warnings=TRUE, message=TRUE}
 cov1 <- as.factor(coldata$authors)
@@ -77,12 +82,16 @@ all(rownames(coldata) %in% colnames(cts))
 cts <- cts[, rownames(coldata)]
 ```
 
+### run DESeq2
+
+The batch corrected read counts are then used for running DESeq2 analyses
 
 ```{r deseq2, warnings=TRUE, message=FALSE}
 dds <- DESeqDataSetFromMatrix(countData = adjusted_counts,
                               colData = coldata,
                               design = ~ group)
 ```
+transformation
 
 ```{r vst, warnings=TRUE, message=FALSE}
 vsd <- vst(dds, blind=FALSE)
@@ -90,9 +99,11 @@ pcaData <- plotPCA(vsd, intgroup=c("group", "authors"), returnData=TRUE)
 percentVar <- round(100 * attr(pcaData, "percentVar"))
 ```
 
+### PCA plot (all)
 
+PCA plot for the dataset that includes all libraries.
 
-```{r pcaplot, fig.cap="FigX: PCA plots (all samples)", fig.width=8, fig.height=8}
+```{r pcaplot, fig.cap="Fig 3.1: PCA plots (all samples)", fig.width=8, fig.height=8}
 ggplotly(ggplot(pcaData, aes(PC1, PC2, color=group.1, shape=authors)) +
   scale_shape_manual(values=1:8) + 
   theme_bw() +
@@ -102,8 +113,11 @@ ggplotly(ggplot(pcaData, aes(PC1, PC2, color=group.1, shape=authors)) +
   ylab(paste0("PC2: ",percentVar[2],"% variance")))
 ```
 
+## PCA plot for differenticated cell libraries
 
-## Plot differenciated cells only
+### Import datasets
+
+The `counts` data and its associated metadata (`coldata`) are imported for analyses
 
 ```{r import2, warnings=TRUE, message=FALSE}
 setwd("~/github/amnion.vs.other_RNASeq")
@@ -111,16 +125,24 @@ counts2 = 'assets/counts-dotted.tsv'
 groupFile = 'assets/batch-dotted.v2.tsv'
 coldata2 <- read.csv(groupFile, row.names=1, sep="\t", stringsAsFactors = TRUE)
 cts2 <- as.matrix(read.csv(counts2,sep="\t",row.names="gene.ids"))
-all(rownames(coldata2) %in% colnames(cts2))
-cts2 <- cts2[, rownames(coldata2)]
 ```
 
-Inspect the `coldata`
+inspect the `coldata`
 
 ```{r coldata2}
 DT::datatable(coldata2)
 ```
 
+
+reorder columns of `cts` according to `coldata` rows. Check if it both files matches.
+```{r order2}
+all(rownames(coldata2) %in% colnames(cts2))
+cts2 <- cts2[, rownames(coldata2)]
+```
+
+### Batch correction
+
+Using combat seq (SVA package) run batch correction - using bioproject ids as variable (dataset origin).
 
 ```{r batchcorrect2, warnings=TRUE, message=TRUE}
 cov1 <- as.factor(coldata2$authors)
@@ -128,6 +150,9 @@ adjusted_counts <- ComBat_seq(cts2, batch=cov1, group=NULL)
 all(rownames(coldata2) %in% colnames(cts2))
 cts2 <- cts2[, rownames(coldata2)]
 ```
+### run DESeq2
+
+The batch corrected read counts are then used for running DESeq2 analyses
 
 ```{r deseq2b, warnings=TRUE, message=FALSE}
 dds <- DESeqDataSetFromMatrix(countData = adjusted_counts,
@@ -135,13 +160,17 @@ dds <- DESeqDataSetFromMatrix(countData = adjusted_counts,
                               design = ~ group)
 ```
 
+transformation
+
 ```{r vst2, warnings=TRUE, message=FALSE}
 vsd <- vst(dds, blind=FALSE)
 pcaData <- plotPCA(vsd, intgroup=c("group", "authors"), returnData=TRUE)
 percentVar <- round(100 * attr(pcaData, "percentVar"))
 ```
 
-```{r PCAplotDiffer, fig.cap="FigX: PCA plots (all samples)", fig.width=8, fig.height=8}
+### PCA plot (differenticated)
+
+```{r PCAplotDiffer, fig.cap="Fig 3.2: PCA plots (differenticated)", fig.width=8, fig.height=8}
 ggplotly(ggplot(pcaData, aes(PC1, PC2, color=group.1, shape=authors)) +
   scale_shape_manual(values=1:8) + 
   theme_bw() +
